= Open Adventure project news =
// SPDX-FileCopyrightText: (C) Eric S. Raymond <esr@thyrsus.com>
// SPDX-License-Identifier: CC-BY-4.0

1.18: 2024-02-15::
  Bring the manual page fully up to date.

1.17: 2024-01-02::
  Saying Z'ZZZ at reservoir no longer causes the waters to part and crash.

1.16: 2023-04-15::
  Savefiles now have an identifying magic cookie at the front.
  Resume detects if a save has incompatible endianness.

1.15: 2023-04-03::
  Commands in magic-word sequence now interrupt it, as in original.
  Bug fix for bird not starting caged in endgame.

1.14: 2023-03-09::
  Added -a option for BBS door systems.
  -o reverts to the old message on some failed magic words. 
  Typo fixes and documentation polishing.

1.13: 2023-02-28::
  Fixed slightly buggy emission of end-of-game messages on a win.

1.12: 2023-02-06::
  The bug and todo list has been cleared; project declared finished.
  Correctness has been systematically tested against the 1995 code.
  Typo fixes and documentation polishing.

1.11: 2022-04-14::
  Restore 100% test coverage.
  Use TAP reporting for tests.

1.10: 2022-04-06::
  Fixed a bug that manifested after two "fly rug" commands - third one fails.
  Fix some glitches in processing fee fie foe foo.
  Correct some object start states and reading-related glitches in the endgame.

1.9: 2020-08-27::
  Update the dungeon maker to avoid a deprecation due to security issues

1.8: 2019-04-19::
  Minor typo and capitalization glitches in user-visible text fixed & documented.
  Save format has changed.

1.7: 2018-12-03::
  Python 3 and OS X port fixes.

1.6: 2018-11-15::
  Split commands with verbless objects now pick up a preceding verb correctly.

1.5: 2018-11-11::
  Fix for a minor bug in inventory handling.
  Handle a bare numeric token on the command line a bit more gracefully.

1.4: 2017-08-07::
  Repair packaging error (omitted templates.)
  Minor improvements in odd grammar cases.

1.3: 2017-08-01::