@@ -369,7 +369,7 @@ A crystal bridge spans the fissure.
 
 > get knife
 
-The dwarves' knives vanish as they strike the walls of the cave.
+I see no knife here.
 
 > quit
 
